--- a/Angular-HelloWorld-master/angular.json
+++ b/Angular-HelloWorld-master/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "newProjectRoot": "adder_wale_project",
   "projects": {
     "angular-hello-world": {
       "root": "",
