--- a/Angular-HelloWorld-master/angular.json
+++ b/Angular-HelloWorld-master/angular.json
@@ -5,7 +5,7 @@
   "projects": {
     "angular-hello-world": {
       "root": "",
-      "sourceRoot": "src",
+      "sourceRoot": "source",
       "projectType": "application",
       "architect": {
         "build": {
