changes for feature-b

--- a/Angular-HelloWorld-master/angular.json
+++ b/Angular-HelloWorld-master/angular.json
@@ -3,10 +3,10 @@
   "version": 1,
   "newProjectRoot": "adder_wale_project",
   "projects": {
-    "angular-hello-world": {
+    "angular-hello-world_ko_krooo": {
       "root": "",
       "sourceRoot": "src",
-      "projectType": "application",
+      "projectType": "application_boht_sari_h",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
