feature-a changes done

--- a/Angular-HelloWorld-master/angular.json
+++ b/Angular-HelloWorld-master/angular.json
@@ -5,7 +5,7 @@
   "projects": {
     "angular-hello-world": {
       "root": "",
-      "sourceRoot": "src",
+      "sourceRoot": "srccccccccccccccccccc",
       "projectType": "application_bohot_sari_h",
       "architect": {
         "build": {
